--- a/testargocd/api-db-secret.yaml
+++ b/testargocd/api-db-secret.yaml
@@ -2,8 +2,9 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: api-db-secret
+  annotations:
+    secret-generator.v1.mittwald.de/autogenerate: password  
 data:
-  password: c29zdHJhZGVz
   username: c29zdHJhZGVz
 type: Opaque
 
