--- a/testargocd/mysql-integration-pv.yaml
+++ b/testargocd/mysql-integration-pv.yaml
@@ -5,8 +5,11 @@ metadata:
 spec:
   capacity:
     storage: 5Gi
-
+  hostPath:
+    path: /mnt/data
+    type: ''
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
+  storageClassName: slow
   volumeMode: Filesystem
