--- a/testargocd/api-db-secret.yaml
+++ b/testargocd/api-db-secret.yaml
@@ -2,10 +2,9 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: api-db-secret
-  annotations:
-    secret-generator.v1.mittwald.de/autogenerate: password  
 data:
   username: c29zdHJhZGVz
+  password: c29zdHJhZGVz
 type: Opaque
 
 ---
@@ -14,8 +13,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: log-db-secret
-  annotations:
-    secret-generator.v1.mittwald.de/autogenerate: password
 data:
+  password: c29zdHJhZGVzX3Byb2R1Y3Rpb25fbG9n
   username: c29zdHJhZGVzX3Byb2R1Y3Rpb25fbG9n
 type: Opaque
