--- a/integration/secret/mysql-integration-pv.yaml
+++ b/integration/secret/mysql-integration-pv.yaml
@@ -13,3 +13,21 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: slow
   volumeMode: Filesystem
+  
+---
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: sostrades-api-data-pv
+spec:
+  capacity:
+    storage: 5Gi
+  hostPath:
+    path: /mnt/data
+    type: ''
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: slow
+  volumeMode: Filesystem  
+  
