--- a/integration/secret/mysql-integration-pv.yaml
+++ b/integration/secret/mysql-integration-pv.yaml
@@ -29,4 +29,18 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   volumeMode: Filesystem  
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: sostrades-api-data-pvc
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+---
   
