--- a/integration/frontend.yaml
+++ b/integration/frontend.yaml
@@ -49,7 +49,7 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           imagePullPolicy: Never
-      restartPolicy: Never          
+      restartPolicy: Always          
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
       securityContext: {}
