--- a/integration/secret/api-db-secret.yaml
+++ b/integration/secret/api-db-secret.yaml
@@ -17,3 +17,15 @@ data:
   password: c29zdHJhZGVzX3Byb2R1Y3Rpb25fbG9n
   username: c29zdHJhZGVzX3Byb2R1Y3Rpb25fbG9n
 type: Opaque
+
+---
+
+kind: Secret
+apiVersion: v1
+metadata:
+  name: api-sostrades-api-rsa-key
+  namespace: sostrades
+data:
+  private_key.pem: ''
+  public_key.pem: ''
+type: Opaque
