--- a/integration/secret/api-db-secret.yaml
+++ b/integration/secret/api-db-secret.yaml
@@ -29,3 +29,34 @@ data:
   private_key.pem: ''
   public_key.pem: ''
 type: Opaque
+
+---
+
+kind: Secret
+apiVersion: v1
+metadata:
+  name: githuboauth
+  namespace: sostrades
+  uid: 3f1bd33b-b20f-42d3-90b6-3e596d56d22c
+  resourceVersion: '364292639'
+  creationTimestamp: '2022-07-20T10:04:16Z'
+  managedFields:
+    - manager: Mozilla
+      operation: Update
+      apiVersion: v1
+      time: '2022-07-20T10:04:16Z'
+      fieldsType: FieldsV1
+      fieldsV1:
+        'f:data':
+          .: {}
+          'f:settings.json': {}
+        'f:type': {}
+data:
+  settings.json: >-
+    {
+    "GITHUB_CLIENT_ID": "cfc9ecf762d668dac41d",
+    "GITHUB_CLIENT_SECRET": "9771c34bc0276d43ec209b9ec9495d3fe0764aa4",
+    "GITHUB_API_URL": "https://api.github.com/",
+    "GITHUB_AUTH_URL": "https://github.com/login/oauth/"
+    }
+type: Opaque
