--- a/integration/secret/api-db-secret.yaml
+++ b/integration/secret/api-db-secret.yaml
@@ -23,6 +23,19 @@ type: Opaque
 kind: Secret
 apiVersion: v1
 metadata:
+  name: api-sostrades-api-db-data
+  namespace: sostrades
+data:
+  password: YWRtaW4=
+  username: c29zdHJhZGVz
+type: Opaque
+
+
+---
+
+kind: Secret
+apiVersion: v1
+metadata:
   name: api-sostrades-api-rsa-key
   namespace: sostrades
 data:
