--- a/integration/secret/api-db-secret.yaml
+++ b/integration/secret/api-db-secret.yaml
@@ -29,6 +29,17 @@ data:
   password: YWRtaW4=
   username: c29zdHJhZGVz
 type: Opaque
+---
+
+kind: Secret
+apiVersion: v1
+metadata:
+  name: api-sostrades-api-db-log
+  namespace: sostrades
+data:
+  password: YWRtaW4=
+  username: c29zdHJhZGVz
+type: Opaque
 
 
 ---
