--- a/integration/secret/mysql-integration-pv.yaml
+++ b/integration/secret/mysql-integration-pv.yaml
@@ -31,6 +31,23 @@ spec:
   volumeMode: Filesystem  
 
 ---
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: mysql-sostrades-pv
+spec:
+  capacity:
+    storage: 3Gi
+  hostPath:
+    path: /mnt/data
+    type: ''
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: slow
+  volumeMode: Filesystem
+  
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -41,5 +58,17 @@ spec:
   resources:
     requests:
       storage: 5Gi
+---
+  
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-sostrades-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 3Gi
 ---
   
