--- a/mysql/mysql.yaml
+++ b/mysql/mysql.yaml
@@ -43,10 +43,7 @@ spec:
           name: mysql
           env:
             - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-sostrades-password
-                  key: mysql-root-password
+              value: admin
             - name: MYSQL_DATABASE
               value: my_database
           securityContext: {}
