--- a/mysql/mysql.yaml
+++ b/mysql/mysql.yaml
@@ -74,6 +74,7 @@ spec:
           env:
             - name: MYSQL_ROOT_PASSWORD
               value: admin
+##change to value from secret              
             - name: MYSQL_DATABASE
               value: my_database
           securityContext: {}
