--- a/mysql/mysql.yaml
+++ b/mysql/mysql.yaml
@@ -94,7 +94,7 @@ spec:
 #                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
 #                  fi
 #                  mysqladmin status -uroot -p"${password_aux}"
-                - mysqladmin status -uroot 
+                - mysqladmin status 
             timeoutSeconds: 1
             periodSeconds: 10
             successThreshold: 1
