--- a/argocd.yaml
+++ b/argocd.yaml
@@ -21,3 +21,29 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - Replace=true
+
+---
+
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: service
+spec:
+  destination:
+    name: ''
+    namespace: sostrades
+    server: 'https://kubernetes.default.svc'
+  source:
+    path: service
+    repoURL: 'https://github.com/sostrades-radouanbouadel/ArgocdOF.git'
+    targetRevision: HEAD
+    directory:
+      recurse: true
+  project: default
+  syncPolicy:
+    automated:
+      prune: false
+      selfHeal: false
+
+---
+
