--- a/ontology/ontogoly.yaml
+++ b/ontology/ontogoly.yaml
@@ -39,7 +39,7 @@ spec:
               memory: 1200Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          imagePullPolicy: Always
+          imagePullPolicy: Never
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
