--- a/build-api.yaml
+++ b/build-api.yaml
@@ -1,14 +1,14 @@
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
-  name: api
+  name: frontend
   labels:
-    app: api
+    app: frontend
 spec:
   source:
     type: Git
     git:
-      uri: https://github.com/sostrades-radouanbouadel/ArgocdOF.git
+      uri: https://github.com/sostrades-radouanbouadel/infrastructure.git
     contextDir: frontend
   strategy:
     type: Docker                      
@@ -17,7 +17,39 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: api:latest
+      name: frontend:1
+---
+
+apiVersion: v1
+kind: ImageStream
+metadata:
+  labels:
+    application: frontend
+  name: frontend
+  namespace: sostrades
+  
+---
+
+apiVersion: build.openshift.io/v1
+kind: BuildConfig
+metadata:
+  name: api
+  labels:
+    app: api
+spec:
+  source:
+    type: Git
+    git:
+      uri: https://github.com/sostrades-radouanbouadel/infrastructure.git
+    contextDir: api
+  strategy:
+    type: Docker                      
+    dockerStrategy:
+      dockerfilePath: Dockerfile    # Look for Dockerfile in: gitUri/contextDir/dockerfilePath
+  output:
+    to:
+      kind: ImageStreamTag
+      name: api:1
 ---
 
 apiVersion: v1
@@ -27,3 +59,5 @@ metadata:
     application: api
   name: api
   namespace: sostrades
+  
+---
