--- a/sostrades/deploy/base/integration/service/api.yaml
+++ b/sostrades/deploy/base/integration/service/api.yaml
@@ -25,7 +25,7 @@ spec:
       protocol: TCP
       port: 8004
       targetPort: 8004
-  internalTrafficPolicy: Cluster
+#  internalTrafficPolicy: Cluster
   type: ClusterIP
   selector:
     app: api
