--- a/sostrades/deploy/base/ontology/deployment/ontology.yaml
+++ b/sostrades/deploy/base/ontology/deployment/ontology.yaml
@@ -39,7 +39,7 @@ spec:
               memory: 1200Mi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
