--- a/sostrades/route/route.yaml
+++ b/sostrades/route/route.yaml
@@ -4,14 +4,14 @@ metadata:
   name: frontend
   namespace: sostrades
   labels:
-    app: frontend
-    app.kubernetes.io/component: frontend
-    app.kubernetes.io/instance: frontend
-    app.kubernetes.io/name: frontend
-    app.kubernetes.io/part-of: sostrades
-  annotations:
-    kubernetes.io/tls-acme: 'true'
-    openshift.io/host.generated: 'true'
+#    app: frontend
+#    app.kubernetes.io/component: frontend
+#    app.kubernetes.io/instance: frontend
+#    app.kubernetes.io/name: frontend
+#    app.kubernetes.io/part-of: sostrades
+#  annotations:
+#    kubernetes.io/tls-acme: 'true'
+#    openshift.io/host.generated: 'true'
 spec:
   host: 127.0.0.1:8089
   to:
