--- a/sostrades/deploy/base/integration/service/frontend.yaml
+++ b/sostrades/deploy/base/integration/service/frontend.yaml
@@ -11,7 +11,7 @@ spec:
       protocol: TCP
       port: 8089
       targetPort: 8080
-  type: ClusterIP
+  type: LoadBalancer
   sessionAffinity: None
   selector:
     app: frontend
